{
    "name": "UIActions",
    "maps": [
        {
            "name": "UIActions",
            "id": "65aabb92-8f17-42c0-a262-45942e048765",
            "actions": [
                {
                    "name": "SelectItem1",
                    "type": "Button",
                    "id": "4b819032-8cc6-4a49-b68a-5b7f463f0ece",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectItem2",
                    "type": "Button",
                    "id": "4977df41-6f5f-4871-91c5-4fe88319ae9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectItem3",
                    "type": "Button",
                    "id": "6b48af7f-45f7-4925-80b1-4139cb70610e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateItem",
                    "type": "Button",
                    "id": "dc8a8d5e-fdfb-4492-9f38-df24873d1602",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "51f99958-df06-48ee-b720-e3776236eed6",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a15cba57-c2d9-481b-96e8-168518085b5b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "697ff1d6-9145-4fa5-9872-31dfc1b05590",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "650b704a-f900-45fd-8995-2246c60c895f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}